--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# requirements.txt
 streamlit
 pandas
 numpy
-opencv-python-headless  # <-- Change this line
-deepface
-tensorflow
+opencv-python-headless
+deepface>=0.0.79
+tf-keras>=2.0.0  # <-- Add this line
+tensorflow>=2.19.0,<2.20.0  # <-- Pin to compatible version
 setuptools
