--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ deepface>=0.0.79
 tf-keras>=2.0.0  # <-- Add this line
 tensorflow>=2.19.0,<2.20.0  # <-- Pin to compatible version
 setuptools
+streamlit-webrtc
